--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <div class="navbar-brand">Contact Book</div>
+      <div class="navbar-brand">Card Issuers</div>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="/contacts">Index</a></li>
-      <li><a href="/contacts/new">New</a></li>
+      <li><a href="/cardissuers">Index</a></li>
+      <li><a href="/cardissuers/new">New</a></li>
     </ul>
   </div>
 </nav>
