--- a/views/cardissuers/new.ejs
+++ b/views/cardissuers/new.ejs
@@ -8,7 +8,7 @@
 
     <div class="container contact contact-new">
       <div class="contact-menu">
-        <a class="btn btn-default" href="/cardissuers">Back</a>
+        <a class="btn btn-default" href="/">Back</a>
       </div>
       <h2>New</h2>
       <form class="contact-form" action="/cardissuers" method="post">
