--- a/views/cardissuers/show.ejs
+++ b/views/cardissuers/show.ejs
@@ -8,20 +8,32 @@
 
     <div class="container contact contact-show">
       <div class="contact-menu">
-        <a class="btn btn-default" href="/cardissuers">Back</a>
-        <a class="btn btn-default" href="/cardissuers/<%= Cardissuer._id %>/edit">Edit</a>
-        <form action="/cardissuers/<%= Cardissuer._id %>?_method=delete" method="post">
+        <a class="btn btn-default" href="/">Back</a>
+        <a class="btn btn-default" href="/CreditCardIssuerList/<%= CreditCardIssuerList._id %>/edit">Edit</a>
+        <form action="/cardissuers/<%= CreditCardIssuerList._id %>?_method=delete" method="post">
           <a class="btn btn-default" href="#" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
         </form>
       <div>
       <h2>Show</h2>
-      <h3><%= Cardissuer.cardissuer%></h3>
+      <h3><%= CreditCardIssuerList.issuer%></h3>
       <div>
-        <label>Amount</label><span><%= Cardissuer.amount %></span>
+        <label>Amount</label><span><%= CreditCardIssuerList.amount %></span>
       </div>
       <div>
-        <label>Period</label><span><%= Cardissuer.period %></span>
+        <label>cost_period</label><span><%= CreditCardIssuerList.cost_period %></span>
       </div>
+      <div>
+          <label>holding</label><span><%= CreditCardIssuerList.holding %></span>
+        </div>
+
+        <div>
+            <label>waiting</label><span><%= CreditCardIssuerList.waiting %></span>
+          </div>
+
+          <div>
+              <label>comments</label><span><%= CreditCardIssuerList.comments %></span>
+          </div>
+
     </div>
   </body>
 </html>
