--- a/views/cardissuers/edit.ejs
+++ b/views/cardissuers/edit.ejs
@@ -8,25 +8,27 @@
 
     <div class="container contact contact-edit">
       <div class="contact-menu">
-        <a class="btn btn-default" href="/cardissuers/<%= Cardissuer._id %>">Back</a>
+        <a class="btn btn-default" href="/CreditCardIssuerList/<%= CreditCardIssuerList._id %>">Back</a>
       </div>
       <h2>Edit</h2>
-      <form class="contact-form" action="/cardissuers/<%= Cardissuer._id %>?_method=put" method="post">
+      <form class="contact-form" action="/CreditCardIssuerList/<%= CreditCardIssuerList._id %>?_method=put" method="post">
         <div class="form-group">
           <label for="issuer">Card Issuers</label>
-          <input class="form-control" type="text" id="issuer" name="issuer" value="<%= Cardissuer.issuer %>">
+          <input class="form-control" type="text" id="issuer" name="issuer" value="<%= CreditCardIssuerList.issuer %>">
         </div>
         <div class="form-group">
           <label for="amount">Amount</label>
-          <input class="form-control" type="text" id="amount" name="amount" value="<%= Cardissuer.amount %>">
+          <input class="form-control" type="text" id="amount" name="amount" value="<%= CreditCardIssuerList.amount %>">
         </div>
         <div class="form-group">
-          <label for="period">Period</label>
-          <input class="form-control" type="text" id="period" name="period" value="<%= Cardissuer.period %>">
+          <label for="cost_period">cost_period</label>
+          <input class="form-control" type="text" id="cost_period" name="cost_period" value="<%= CreditCardIssuerList.cost_period %>">
         </div>
         <div>
           <button type="submit" class="btn btn-default">Submit</button>
         </div>
+
+        
       </div>
     </form>
   </body>
