--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,11 +1,13 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <div class="navbar-brand">Card Issuers</div>
+      <div class="navbar-brand">Credit Card Management System ver.171205</div>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="/cardissuers">Index</a></li>
-      <li><a href="/cardissuers/new">New</a></li>
+      <div> 
+      <li><a href="/CreditCardIssuerList">Card List</a></li>
+      <li><a href="/CreditCardIssuerList/new">Create New Card Issuer</a></li>
+    </div>
     </ul>
   </div>
 </nav>
