--- a/views/cardissuers/index.ejs
+++ b/views/cardissuers/index.ejs
@@ -8,6 +8,7 @@
 
     <div class="container contact contact-index">
       <h2>Card Issuer List</h2>
+      <table width="615" height="605" border="1">
       <tb>
       <ul class="list-group">
         <% CreditCardIssuerList.forEach(function(CreditCardIssuerList) { %>
@@ -26,6 +27,7 @@
         <% }) %>
       </ul>
     </tb>
+  </table>
 
     </div>
   </body>
