--- a/views/cardissuers/edit.ejs
+++ b/views/cardissuers/edit.ejs
@@ -24,6 +24,24 @@
           <label for="cost_period">cost_period</label>
           <input class="form-control" type="text" id="cost_period" name="cost_period" value="<%= CreditCardIssuerList.cost_period %>">
         </div>
+
+        <div class="form-group">
+            <label for="holding">holding</label>
+            <input class="form-control" type="text" id="holding" name="holding" value="<%= CreditCardIssuerList.holding %>">
+          </div>
+
+          <div class="form-group">
+              <label for="cost_period">waiting</label>
+              <input class="form-control" type="text" id="waiting" name="waiting" value="<%= CreditCardIssuerList.waiting %>">
+            </div>
+
+            <div class="form-group">
+                <label for="cost_period">comments</label>
+                <input class="form-control" type="text" id="comments" name="comments" value="<%= CreditCardIssuerList.comments %>">
+              </div>
+
+
+
         <div>
           <button type="submit" class="btn btn-default">Submit</button>
         </div>
