--- a/views/cardissuers/new.ejs
+++ b/views/cardissuers/new.ejs
@@ -11,7 +11,7 @@
         <a class="btn btn-default" href="/">Back</a>
       </div>
       <h2>New</h2>
-      <form class="contact-form" action="/cardissuers" method="post">
+      <form class="contact-form" action="/CreditCardIssuerList" method="post">
         <div class="form-group">
           <label for="issuer">Issuer</label>
           <input class="form-control" type="text" id="issuer" name="issuer" value="">
@@ -23,7 +23,32 @@
         <div class="form-group">
           <label for="period">Period</label>
           <input class="form-control" type="text" id="period" name="period" value="">
-        </div>
+        
+          <div class="form-group">
+              <label for="holding">holding</label>
+              <input class="form-control" type="text" id="holding" name="holding" value="">
+            </div>
+  
+            <div class="form-group">
+                <label for="cost_period">waiting</label>
+                <input class="form-control" type="text" id="waiting" name="waiting" value="">
+              </div>
+  
+              <div class="form-group">
+                  <label for="cost_period">comments</label>
+                  <input class="form-control" type="text" id="comments" name="comments" value="">
+                </div></div>
+
+                <script type = "text/javascript">
+                var today = new Date();
+                document.write( today.getDate());
+                </script>
+
+                <div class="form-group">
+                    <label for="cost_period">Creation Date</label>
+                    <input class="form-control" type="text" id="CreationDate" name="CreationDate" value= "todate.getDate()">
+                  </div></div>
+
         <div>
           <button type="submit" class="btn btn-default">Submit</button>
         </div>
