--- a/views/cardissuers/show.ejs
+++ b/views/cardissuers/show.ejs
@@ -10,7 +10,7 @@
       <div class="contact-menu">
         <a class="btn btn-default" href="/">Back</a>
         <a class="btn btn-default" href="/CreditCardIssuerList/<%= CreditCardIssuerList._id %>/edit">Edit</a>
-        <form action="/cardissuers/<%= CreditCardIssuerList._id %>?_method=delete" method="post">
+        <form action="/CreditCardIssuerList/<%= CreditCardIssuerList._id %>?_method=delete" method="post">
           <a class="btn btn-default" href="#" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
         </form>
       <div>
