--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,13 +1,28 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <div class="navbar-brand">Credit Card Management System ver.171205</div>
+      <div class="navbar-brand">Credit Card Management System ver.171206</div>
     </div>
-    <ul class="nav navbar-nav">
+    <!-- <ul class="nav navbar-nav"> -->
       <div> 
-      <li><a href="/CreditCardIssuerList">Card List</a></li>
-      <li><a href="/CreditCardIssuerList/new">Create New Card Issuer</a></li>
-    </div>
-    </ul>
+      <li>
+        <a href="/CreditCardIssuerList">Card List</a>
+      </li>
+      <li>
+        <a href="/CreditCardIssuerList/new">Create New Card Issuer</a>
+      </li>
+      </div>
+
+      <div> 
+          <li><a href="/contacts">contacts List</a></li>
+          <li><a href="/contacts/new">Create New contacts</a></li>
+      </div>
+
+      <div> 
+          <li><a href="/mycardlists">My Card List</a></li>
+          <li><a href="/mycardlists/new">Create New mycardlists</a></li>
+      </div>
+
+    <!-- </ul> -->
   </div>
 </nav>
