--- a/views/CreditCardIssuerLists/new.ejs
+++ b/views/CreditCardIssuerLists/new.ejs
@@ -2,6 +2,13 @@
 <html>
   <head>
     <% include ../partials/head %>
+      
+    <script>
+      var today = new Date();      
+      $(document).ready(function() {
+         $("#CreationDate").val(today.getDate());
+      }); 
+    </script>
   </head>
   <body>
     <% include ../partials/nav %>
@@ -15,6 +22,7 @@
         <div class="form-group">
           <label for="issuer">Issuer</label>
           <input class="form-control" type="text" id="issuer" name="issuer" value="">
+          
         </div>
         <div class="form-group">
           <label for="amount">Amount</label>
@@ -39,14 +47,10 @@
                   <input class="form-control" type="text" id="comments" name="comments" value="">
                 </div></div>
 
-                <script type = "text/javascript">
-                var today = new Date();
-                document.write( today.getDate());
-                </script>
-
+                
                 <div class="form-group">
                     <label for="cost_period">Creation Date</label>
-                    <input class="form-control" type="text" id="CreationDate" name="CreationDate" value= "todate.getDate()">
+                    <input class="form-control" type="text" id="CreationDate" name="CreationDate" value="">
                   </div></div>
 
         <div>
