--- a/views/contacts/edit.ejs
+++ b/views/contacts/edit.ejs
@@ -22,7 +22,7 @@
         </div>
         <div class="form-group">
           <label for="phone">Phone</label>
-          <input class="form-control" type="text" id="phone" name="phone" value="<%= contact.phone %>">
+          <input class="form-control" type="tel" id="phone" name="phone" value="<%= contact.phone %>">
         </div>
         <div>
           <button type="submit" class="btn btn-default">Submit</button>
