--- a/views/contacts/index.ejs
+++ b/views/contacts/index.ejs
@@ -7,11 +7,13 @@
     <% include ../partials/nav %>
 
     <div class="container contact contact-index">
-      <h2>Index</h2>
+      <h2>User Info</h2>
       <ul class="list-group">
         <% contacts.forEach(function(contact) { %>
           <li class="list-group-item">
             <a href="/contacts/<%= contact._id %>"><%= contact.name %></a>
+
+ 
           </li>
         <% }) %>
       </ul>
