--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,3 +3,17 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <title>CC Management System</title>
+
+<script>
+    $(document).ready(function() {
+      if ($.cookie("access-token") == null)
+      {
+        $("#kakao-login-btn").show();
+      }
+      else
+      {
+        $("#kakao-login-btn").hide();
+      }
+    
+    });
+  </script>
