로그인 안되어 있으면 body contents 숨기기

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -9,8 +9,10 @@
   <body>
     <% include ../partials/nav %>
 
+    
     <a id="kakao-login-btn"></a>
     <div href="http://developers.kakao.com/logout"></div>
+    <div id="contents">
     <script type='text/javascript'>
       //<![CDATA[
         // 사용할 앱의 JavaScript 키를 설정해 주세요.
@@ -34,6 +36,6 @@
    <p></p>
     <!-- <a href="/kakao_oauth">After Login</a> -->
 
-
+  </div>
   </body>
 </html>
