--- a/views/CreditCardIssuerLists/index.ejs
+++ b/views/CreditCardIssuerLists/index.ejs
@@ -16,7 +16,14 @@
       
       <table border="1">
       <!-- <ul class="list-group"> -->
-          
+          <tr style="text-align: center"> 
+          <td style="width:100px">발급사</td>
+          <td style="width:100px">금액    </td>
+          <td style="width:100px">사용기간    </td>
+          <td style="width:100px">유지기간    </td>
+          <td style="width:100px">해지/대기   </td>
+          <td style="width:200px">비고    </td>
+          </tr>
         <% CreditCardIssuerList.forEach(function(CreditCardIssuerList) { %>
           <!-- <li class="list-group-item"> -->
               <tr style="text-align: center"> 
@@ -27,6 +34,7 @@
               <td style="width:100px"><%= CreditCardIssuerList.cost_period %>  </td>
               <td style="width:100px"><%= CreditCardIssuerList.holding %>  </td>
               <td style="width:100px"><%= CreditCardIssuerList.waiting %>  </td>
+              <td style="width:200px"><%= CreditCardIssuerList.comments %>  </td>
                
             </tr>
           <!-- </li> -->
