--- a/views/mycardlists/index.ejs
+++ b/views/mycardlists/index.ejs
@@ -6,9 +6,18 @@
   <body>
     <% include ../partials/nav %>
 
+
+  
+
     <div class="container mycardlists mycardlists-index">
       <h2>My Card List</h2>
       <!-- <ul class="list-group"> -->
+ 
+          <div class="container contact contact-show">
+              <div class="contact-menu">
+                <a class="btn btn-default" href="/mycardlists/new">Add New</a>
+      
+              <div>
 
           <table border="1">
               <tr style="text-align: center">  
