--- a/views/CreditCardIssuerLists/show.ejs
+++ b/views/CreditCardIssuerLists/show.ejs
@@ -8,7 +8,7 @@
 
     <div class="container contact contact-show">
       <div class="contact-menu">
-        <a class="btn btn-default" href="/">Back</a>
+        <a class="btn btn-default" href="/CreditCardIssuerList">Back</a>
         <a class="btn btn-default" href="/CreditCardIssuerList/<%= CreditCardIssuerList._id %>/edit">Edit</a>
         <form action="/CreditCardIssuerList/<%= CreditCardIssuerList._id %>?_method=delete" method="post">
           <a class="btn btn-default" href="#" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
