--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -23,6 +23,8 @@
           <li><a href="/mycardlists/new">Create New mycardlists</a></li>
       </div>
 
+      <li><a href="./test">Javescript test</a></li>
+
     <!-- </ul> -->
   </div>
 </nav>
