--- a/views/mycardlists/edit.ejs
+++ b/views/mycardlists/edit.ejs
@@ -18,25 +18,25 @@
           <input class="form-control" type="text" id="person_id" name="person_id" value="<%= mycardlist.person_id %>">
         </div> -->
 
-        <div class="form-group">
-            <label for="issuer">발급사</label>
-            <input class="form-control" type="text" id="issuer" name="issuer" value="<%= mycardlist.issuer %>">
-          </div>
+      <div class="form-group">
+        <label for="issuer">발급사</label>
+        <input class="form-control" type="text" id="issuer" name="issuer" value="<%= mycardlist.issuer %>" disabled>
+      </div>
 
-          <div class="form-group">
-              <label for="received_date">received_date</label>
-              <input class="form-control" type="DATE" id="received_date" name="received_date" value="<%= mycardlist.received_date %>">
-            </div>
+      <div class="form-group">
+          <label for="received_date">received_date</label>
+          <input class="form-control" type="DATE" id="received_date" name="received_date" value="<%= mycardlist.received_date %>">
+      </div>
 
-            <div class="form-group">
-                <label for="discard_date">discard_date</label>
-                <input class="form-control" type="DATE" id="discard_date" name="discard_date" value="<%= mycardlist.discard_date %>">
-              </div>
+      <div class="form-group">
+           <label for="discard_date">discard_date</label>
+           <input class="form-control" type="DATE" id="discard_date" name="discard_date" value="<%= mycardlist.discard_date %>">
+      </div>
 
-              <div class="form-group">
-                  <label for="comments">comments</label>
-                  <input class="form-control" type="text" id="comments" name="comments" value="<%= mycardlist.comments %>">
-                </div>
+      <div class="form-group">
+           <label for="comments">comments</label>
+           <input class="form-control" type="text" id="comments" name="comments" value="<%= mycardlist.comments %>">
+      </div>
  
 
 
