--- a/views/home/test.ejs
+++ b/views/home/test.ejs
@@ -3,14 +3,26 @@
     
   <head>
     <% include ../partials/head %>
-   
-    
-   
+
+       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script> 
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.js"></script> 
+       <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.css" 
+        rel="stylesheet">
+       <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.css" rel="stylesheet">   
+
+        <script type="text/javascript">
+           $(document).ready(function() {
+            $("#datepicker").datepicker();
+           });
+       </script>
+
   </head>
   <body>
     <% include ../partials/nav %>
 
-  
+    <strong>Select Date:</strong> 
+    <input type="text" id="datepicker" name = "datepicker" >
+
     <script>
         window.onload = function() {
                 var result = '<table border = 1>';
@@ -42,8 +54,7 @@
         <table border="1" cellpadding="5">
             <tr>
                 <td>Default</td>
-                <td><input name="name" placeholder="Enter your nickname"
-                    autofocus></td>
+                <td><input name="name" placeholder="Enter your nickname"                    autofocus></td>
             </tr>
             <tr>
                 <td>URL</td>
