--- a/views/mycardlists/new.ejs
+++ b/views/mycardlists/new.ejs
@@ -26,17 +26,13 @@
                 $('#issuer').change(function(){     
                     var x = this.value;
        
-                  $.each(json, function( "issuer" , x){
-                    alert('key:' + key + ' / ' + 'value:' + value);
-                   });
+                  // $.each(json, function( "issuer" , x){
+                  //   alert('key:' + key + ' / ' + 'value:' + value);
+                  //  });
 
                      $('#commentx').val( x  );  //여기에 CreditCardIssuerList.issuer 골라진 CreditCardIssuerList.comments 를 쏴줘야되는디..
                 });
-              });
-
-
-
-       
+              }); 
             </script>
             
             <div class="form-group">
