--- a/views/home/test.ejs
+++ b/views/home/test.ejs
@@ -13,6 +13,7 @@
         <script type="text/javascript">
            $(document).ready(function() {
             $("#datepicker").datepicker();
+            dateFormat: 'yyyy-mm-dd'
            });
        </script>
 
